k8s/apps/default/mattermost/instance/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
spec:
  hostnames:
    - mattermost.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: mattermost
          kind: Service
          port: 8065
      matches:
        - path:
            type: PathPrefix
            value: /
